# claude-decomment-hook

./: Cargo.toml  README.md
src/: main.rs  models.rs
src/core/: detector.rs  language_registry.rs  mod.rs  query_templates.rs
src/filters/: agent_memo.rs  bdd.rs  directive.rs  mod.rs  shebang.rs
src/output/: formatter.rs  mod.rs  xml_builder.rs
