[package]
name = "claude-decomment-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
streaming-iterator = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.5"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-lua = "0.4.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
